logs/arista.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/arista'...
Compiling './lib/python3.5/site-packages/arista/discoverer.py'...
***   File "./lib/python3.5/site-packages/arista/discoverer.py", line 74
    audiolength = 0L
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arista/inputs.py'...
***   File "./lib/python3.5/site-packages/arista/inputs.py", line 282
    print device.product + ": " + label
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/arista/presets.py'...
***   File "./lib/python3.5/site-packages/arista/presets.py", line 546
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/arista/transcoder.py'...
***   File "./lib/python3.5/site-packages/arista/transcoder.py", line 454
    except gobject.GError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/arista-0.9.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/applications'...
Listing './share/arista'...
Listing './share/arista/locale'...
Listing './share/arista/locale/ar'...
Listing './share/arista/locale/ar/LC_MESSAGES'...
Listing './share/arista/locale/ast'...
Listing './share/arista/locale/ast/LC_MESSAGES'...
Listing './share/arista/locale/ca'...
Listing './share/arista/locale/ca/LC_MESSAGES'...
Listing './share/arista/locale/de'...
Listing './share/arista/locale/de/LC_MESSAGES'...
Listing './share/arista/locale/es'...
Listing './share/arista/locale/es/LC_MESSAGES'...
Listing './share/arista/locale/fi'...
Listing './share/arista/locale/fi/LC_MESSAGES'...
Listing './share/arista/locale/fr'...
Listing './share/arista/locale/fr/LC_MESSAGES'...
Listing './share/arista/locale/it'...
Listing './share/arista/locale/it/LC_MESSAGES'...
Listing './share/arista/locale/ja'...
Listing './share/arista/locale/ja/LC_MESSAGES'...
Listing './share/arista/locale/pl'...
Listing './share/arista/locale/pl/LC_MESSAGES'...
Listing './share/arista/locale/pt_BR'...
Listing './share/arista/locale/pt_BR/LC_MESSAGES'...
Listing './share/arista/locale/templates'...
Listing './share/arista/presets'...
Listing './share/arista/ui'...
Listing './share/python-wheels'...
